feat(auth): integrate Firebase authentication and add Google login functionality

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.0.1",
     "lucide-react": "^0.454.0",
     "nepali-datetime": "^1.2.1",
     "react": "^18.3.1",
