--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "letterpad",
+  "name": "aces-lab",
   "type": "module",
   "version": "0.0.0",
   "private": true,
@@ -12,12 +12,16 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-pdf/renderer": "^4.0.0",
+    "@tanstack/react-router": "^1.81.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -28,7 +32,6 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-router-dom": "^6.28.0",
     "react-to-pdf": "^1.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
@@ -39,6 +42,7 @@
     "@antfu/eslint-config": "^3.8.0",
     "@eslint-react/eslint-plugin": "^1.15.2",
     "@eslint/js": "^9.13.0",
+    "@tanstack/router-plugin": "^1.79.0",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
